updated handlers and swagger
